--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,15 @@ WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM openjdk:21-slim
+FROM eclipse-temurin:21-jre
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar /app/
 RUN ls -1 /app/*.jar | grep -v "original-" | head -n 1 | xargs -I{} cp "{}" /app/filmcritic.jar
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends curl \
+    && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app/filmcritic.jar"]
