--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,3 +34,8 @@ deepseek.promt=You are an intelligent film assistant...
 
 # ===== OMDb API =====
 omdb.api.key=${OMDB_API_KEY:<CHANGE_ME>}
+
+# ===== Actuator =====
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=never
