--- a/docker-compose.hub.yml
+++ b/docker-compose.hub.yml
@@ -20,7 +20,7 @@ services:
       retries: 30
 
   backend:
-    build: ./backend
+    image: dqkvi/moviecritic-backend:latest
     container_name: filmcritic-backend
     depends_on:
       mysql:
@@ -37,10 +37,7 @@ services:
       start_period: 20s
 
   frontend:
-    build:
-      context: ./frontend
-      args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:8080}
+    image: dqkvi/moviecritic-frontend:latest
     container_name: filmcritic-frontend
     depends_on:
       backend:
